配置文件增加周期 去掉初始的check service 修改readme

--- a/example/config-example.ini
+++ b/example/config-example.ini
@@ -1,6 +1,8 @@
 [test]
 userId = ABCDEFGHIJKLMNOPQRSTUVWXYZ
-email  = user@example.com
+email = user@example.com
+carPeriod = "@daily"
+ServicePeriod = "@hourly"
 
 [enterbj]
 appKey = kkk
