check service 增加 userid

--- a/config-example.ini
+++ b/config-example.ini
@@ -2,7 +2,7 @@
 userId = ABCDEFGHIJKLMNOPQRSTUVWXYZ
 email = user@example.com
 carPeriod = "@daily"
-ServicePeriod = "@hourly"
+servicePeriod = "@hourly"
 
 [enterbj]
 appKey = kkk
